// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-modal Should render defaut modal 1`] = `
<wpp-modal aria-modal="true" class="wpp-hide wpp-modal wpp-modal-wrapper" exportparts="wrapper, modal, header, body, actions, header-wrapper, body-wrapper, actions-wrapper" style="z-index: 875;">
  <mock:shadow-root>
    <div class="modal-overlay" part="wrapper">
      <wpp-overlay zindex="0"></wpp-overlay>
      <div class="hide modal size-s" data-testid="wpp-modal-content" part="content" role="dialog">
        <div class="header slot-hidden" part="header-wrapper">
          <slot name="header" part="header"></slot>
        </div>
        <div class="body slot-hidden" part="body-wrapper">
          <slot name="body" part="body"></slot>
        </div>
        <div class="actions slot-hidden" part="actions-wrapper">
          <slot name="actions" part="actions"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</wpp-modal>
`;

exports[`wpp-modal Should render open modal 1`] = `
<wpp-modal aria-modal="true" class="wpp-hide wpp-modal wpp-modal-wrapper" exportparts="wrapper, modal, header, body, actions, header-wrapper, body-wrapper, actions-wrapper" is-open="true" style="z-index: 875;">
  <mock:shadow-root>
    <div class="modal-overlay" part="wrapper">
      <wpp-overlay zindex="0"></wpp-overlay>
      <div class="hide modal size-s" data-testid="wpp-modal-content" part="content" role="dialog">
        <div class="header slot-hidden" part="header-wrapper">
          <slot name="header" part="header"></slot>
        </div>
        <div class="body slot-hidden" part="body-wrapper">
          <slot name="body" part="body"></slot>
        </div>
        <div class="actions slot-hidden" part="actions-wrapper">
          <slot name="actions" part="actions"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</wpp-modal>
`;
